Removing blue colour from store map/list toggle button

--- a/app/views/shared/_micello_map_popup.html.erb
+++ b/app/views/shared/_micello_map_popup.html.erb
@@ -10,6 +10,6 @@
     </div>
   </div>
   <a href="<%= centre_store_path(id: '') %>#{store.id}" class="map-micello__overlay__cta btn btn--full btn--main js-pjax-link-stores js-stores-maps-toggle-btn"><span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Store details</a>
-  <button class="map-micello__overlay__cta btn btn--full btn--main btn--main-alt js-stores-maps-toggle-btn" aria-owns="stores-maps-toggle-listing-detail, stores-maps-toggle-map"><span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Store details</button>
+  <button class="map-micello__overlay__cta btn btn--full btn--main js-stores-maps-toggle-btn" aria-owns="stores-maps-toggle-listing-detail, stores-maps-toggle-map"><span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Store details</button>
 </div>
 <span class="map-micello__overlay__close icon icon--close-sml icon--xlrg icon--flush-top" aria-hidden="true"></span>
