Commented out JS auth to help with cut over

--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -3,7 +3,7 @@
 <!--[if (IE 9) & (!IEMobile)]>    <html class="no-js ie-9 ie" lang="en">    <![endif]-->
 <!--[if gt IE 8]><!-->            <html class="no-js" lang="en">            <!--<![endif]-->
 <head>
-  <%= render 'shared/auth' if Rails.env.production? || Rails.env.uat? %>
+  <%#= render 'shared/auth' if Rails.env.production? || Rails.env.uat? %>
   <base href="<%= request.path %>">
   <meta name="fragment" content="!">
   <meta charset="utf-8">
