--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -47,7 +47,7 @@
       <%# Hero heading wrap %>
       <div class="national__heading__intro">
         <h1>
-          <span>Over 10300 stores. Over <%= @products_count %> products</span>
+          <span>Over 10,300 stores. Over <%= number_with_delimiter(@products_count, separator: ',') %> products</span>
           You want. We find.
         </h1>
 
