--- a/app/assets/stylesheets/partials/buttons/_main.scss
+++ b/app/assets/stylesheets/partials/buttons/_main.scss
@@ -131,6 +131,9 @@
 	/* Compact icon - as above but decrease padding more (use with icons) */
 	.btn--main-compact-icon {@include to-em(padding, $spacing-half+1 $spacing-half+3.5);}
 
+  /* Compact icon small - as above but decrease padding even more (use with icons) */
+  .btn--main-compact-icon-sml {@include to-em(padding, $spacing-quarter $spacing-half);}
+
 	/* Large - increase top/btm padding */
 	.btn--main-lrg {@include to-em(padding-top padding-bottom, $spacing-half+$spacing-micro);}
 
