improves click handling on touch devices

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -18,7 +18,7 @@
       <div class="stores-maps__filters-toggle">
         <div class="container">
           <%# Small view %>
-          <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__toggle stores-maps__toggle--link btn btn--main btn--main-alt4 btn--main-compact-icon js-pjax-link-stores js-stores-maps-toggle-btn">
+          <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__toggle stores-maps__toggle--link btn btn--main btn--main-alt4 btn--main-compact-icon js-pjax-link-stores">
             <span class="hide-visually">View list</span>
             <span class="icon icon--list icon--lrg" aria-hidden="true"></span>
           </a>
