Added in link to national product browse page

--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -62,12 +62,11 @@
       <%# Nav %>
       <nav role="navigation">
         <ul class="horiz-list horiz-list--gutter-half">
-          <%# TODO: Add link to National product browse page when it's ready %>
-          <%# <li>
-            <a href="#">
+          <li>
+            <a href="<%= products_path %>">
               <span class="icon icon--shirt" aria-hidden="true"></span>Shop products
             </a>
-          </li> %>
+          </li>
           <li>
             <a href="http://www.westfieldgiftcards.com.au" rel="external">
               <span class="icon icon--gift-card" aria-hidden="true"></span>Buy Gift Cards
