--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -4,19 +4,90 @@
   <div class="container container--position">
     <div class="nav-contextual nav-contextual--dark js-nav-contextual">
       <div class="nav-contextual__clip">
-        <nav class="nav-contextual__clip__inner" role="navigation" aria-label="Contextual navigation">
+        <nav class="nav-contextual__clip__inner" role="navigation" aria-label="<%= params[:controller].titlecase %> categories navigation">
           <ul class="nav-contextual__list horiz-list js-nav-contextual-list">
             <%# [BACKEND]:
-                - We have to have the HTML comments between each `li`s (top level only) or output them all on 1 line, this is to get around the browser creating unneeded white space.
-                - Class `is-active` needs to be appended to the active `a` i.e. the page the user is on.
+                - We have to have the HTML comments between each top level `li`s or output them all on 1 line, this is to get around the browser creating unneeded white space.
+                - Class `is-active` needs to be appended to the active top level `a`s i.e. the page the user is on which includes any sub categories.
             %>
-            <li><a class="is-active" href="#">Women's Fashion</a></li><!--
-            --><li><a href="#">Men's Fashion</a></li><!--
-            --><li><a href="#">Kids</a></li><!--
-            --><li><a href="#">Shoes</a></li><!--
-            --><li><a href="#">Beauty &amp; Health</a></li><!--
-            --><li><a href="#">Computers &amp; Electronics</a></li><!--
-            --><li><a href="#">Bags &amp; Luggage</a></li>
+            <li class="drop-down-menu drop-down-container drop-down-container--hover">
+              <a class="is-active" href="http://google.com.au">Women</a>
+              <div class="drop-down-menu__target drop-down box box--drop-down">
+                <ul class="drop-down-menu__list">
+                  <li class="drop-down-menu__divider "><a href="http://google.com.au" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
+                  <li class="drop-down-menu__divider"><a href="http://google.com.au" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Scelerisque augue elementum</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Tincidunt rhoncus</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Aliquet elementum</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Adipiscing magna</a></li>
+                </ul>
+              </div>
+            </li><!--
+            --><li class="drop-down-menu drop-down-container drop-down-container--hover">
+                <a href="#">Men</a>
+                <div class="drop-down-menu__target drop-down box box--drop-down">
+                  <ul class="drop-down-menu__list">
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Scelerisque augue elementum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Tincidunt rhoncus</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Aliquet elementum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Adipiscing magna</a></li>
+                  </ul>
+                </div>
+            </li><!--
+            --><li class="drop-down-menu drop-down-container drop-down-container--hover">
+                <a href="#">Kids</a>
+                <div class="drop-down-menu__target drop-down box box--drop-down">
+                  <ul class="drop-down-menu__list">
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Scelerisque augue elementum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Tincidunt rhoncus</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Aliquet elementum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Adipiscing magna</a></li>
+                  </ul>
+                </div>
+            </li><!--
+            --><li class="drop-down-menu drop-down-container drop-down-container--hover">
+                <a href="#">Shoes</a>
+                <div class="drop-down-menu__target drop-down box box--drop-down">
+                  <ul class="drop-down-menu__list">
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
+                  </ul>
+                </div>
+            </li><!--
+            --><li class="drop-down-menu drop-down-container drop-down-container--hover">
+                <a href="#">Beauty</a>
+                <div class="drop-down-menu__target drop-down box box--drop-down">
+                  <ul class="drop-down-menu__list">
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
+                  </ul>
+                </div>
+            </li><!--
+            --><li class="drop-down-menu drop-down-container drop-down-container--hover">
+                <a href="#">Bags</a>
+                <div class="drop-down-menu__target drop-down box box--drop-down">
+                  <ul class="drop-down-menu__list">
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Scelerisque augue elementum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Tincidunt rhoncus</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Aliquet elementum</a></li>
+                  </ul>
+                </div>
+            </li>
           </ul>
         </nav>
         <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
@@ -31,7 +102,7 @@
     <%# Show products/deals/events centre selector toggle button %>
     <button class="btn btn--main btn--main-alt4 btn--main-compact-icon-sml" toggle-visibility="show-products-deals-events-toggle">
       <span class="icon icon-ellipsis-horizontal icon--xlrg icon--flush-top" aria-hidden="true"></span>
-      <span class="hide-visually">Toggle [dynamic] centre selector</span>
+      <span class="hide-visually">Toggle <%= params[:controller] %> centre selector</span>
     </button>
     <%# //Show products/deals/events centre selector toggle button %>
   </div>
@@ -39,12 +110,11 @@
 
   <%# Show products/deals/events centre selector %>
   <% if @centre.present? %>
-    <div class="section-nav__centre-selector container--wide toggle-visibility" id="show-products-deals-events-toggle">
+    <div class="section-nav__centre-selector container--wide toggle-visibility js-disabled-hide" id="show-products-deals-events-toggle">
       <div class="container container--position">
         <div class="flag flag--shrink-wrap">
           <div class="flag__image hide-visually">
-            <%# [BACKEND] the word 'dynamic' part of the label needs to either say 'products', 'deals', 'events' depending on what page you're on %>
-            <label for="show-products-deals-events">Show [dynamic] at</label>
+            <label for="show-products-deals-events">Show <%= params[:controller] %> at</label>
           </div>
           <div class="flag__body">
             <select class="one-whole" ng-controller="CentreSelectorController" ng-model="selectedCentre" ng-change="selectCentre()" ng-init="selectedCentre='<%= @centre.code %>'" id="show-products-deals-events">
