--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -151,6 +151,7 @@
       <%= javascript_tag do %>
         function storeMapPageReady() {
           $('.js-defer-image-load-container').deferImages({matchMedia: 'all and (min-width: 40.0625em)'});
+          storeMapPage.store();
         }
       <% end %>
 
