--- a/app/views/terms_conditions/index.html.erb
+++ b/app/views/terms_conditions/index.html.erb
@@ -2,8 +2,7 @@
 
   <h1 class="detail-view__hdr hn" id="detail-view__hdr">Terms &amp; Conditions of Use</h1>
 
-
-  <div class="islet islet--top-btm detail-view__divider detail-view__divider--top detail-view__desc txt-formatted">
+  <div class="islet islet--top detail-view__divider detail-view__divider--top detail-view__desc txt-formatted">
     <h2>General Terms &amp; Conditions of Use</h2>
 
     <p>Current as at 1 October 2013</p>
@@ -103,7 +102,7 @@
 
     <p>Westfield will never ask you to confirm any account or credit card details via email. If you receive an email claiming to be from westfield.com asking you to do so, please ignore it and do not respond.</p>
 
-    <p>The Australian Government has published additional information about protecting yourself in online transactions. This is available at <%= link_to "http://www.staysmartonline.gov.au/", "http://www.staysmartonline.gov.au/", rel: 'external' %> (this website is not provided by the Westfield Group).</p>
+    <p>The Australian Government has published additional information about protecting yourself in online transactions. This is available at <%= link_to 'http://www.staysmartonline.gov.au/', 'http://www.staysmartonline.gov.au/', rel: 'external' %> (this website is not provided by the Westfield Group).</p>
 
     <h3>10. Viruses, hacking and other offences</h3>
 
@@ -126,7 +125,7 @@
     <p>Subject to any non-excludable provisions in the Competition and Consumer Act 2010 and similar State or Territory legislation in Australia:</p>
 
     <ul>
-      <lil>Westfield expressly disclaims any implied or express warranties or conditions of any kind, including non infringement of intellectual property rights relating to information or materials accessible from or on the Site; and</lil>
+      <li>Westfield expressly disclaims any implied or express warranties or conditions of any kind, including non infringement of intellectual property rights relating to information or materials accessible from or on the Site; and</li>
       <li>Westfield shall not be liable to you for any damage resulting from use of or reliance on the materials or information on the website or any other loss or damage whatsoever including, but without limitation, special, indirect, consequential or incidental loss or damage (including loss of profits, revenue, production, opportunity, access to markets, goodwill, reputation, use or any indirect, remote, abnormal or unforeseeable loss), or any loss or damage relating to business interruption, loss of programs or other data on your information systems or costs of replacement goods, or otherwise, even if Westfield is expressly advised of the likelihood of such loss or damage.</li>
     </ul>
 
@@ -138,9 +137,9 @@
 
     <h3>13. Privacy</h3>
 
-    <p>Westfield may collect your personal information through your use of the Site or through your contact with Westfield. Any personal data and other information provided by you will be processed by Westfield in accordance with the <a href="#">Westfield Online Privacy Policy</a>.</p>
+    <p>Westfield may collect your personal information through your use of the Site or through your contact with Westfield. Any personal data and other information provided by you will be processed by Westfield in accordance with the <%= link_to 'Westfield Online Privacy Policy', "#{privacy_policy_index_path}#online-privacy-policy" %></a>.</p>
 
-    <p>By providing any such personal data or other information you agree to the terms of the <a href="#">Westfield Online Privacy Policy</a>, and in particular you agree that Westfield or members of the Westfield Group can collect, hold, use and disclose your personal information in the following ways:</p>
+    <p>By providing any such personal data or other information you agree to the terms of the <%= link_to 'Westfield Online Privacy Policy', "#{privacy_policy_index_path}#online-privacy-policy" %>, and in particular you agree that Westfield or members of the Westfield Group can collect, hold, use and disclose your personal information in the following ways:</p>
 
     <ul>
       <li>for the purpose of and incidental to your use of the Site, including facilitating the completion of orders through the Site and other uses and disclosures we required to operate the Site;</li>
@@ -157,7 +156,7 @@
 
     <h3>15. Waiver</h3>
 
-    <p>If we fail at any time to insist upon strict performance of any of your obligations under these Terms &amp; Conditions, or if we fail to exercise any of the rights or remedies to which we are entitled under them, this shall not constitute a waiver of such rights or remedies and shall not relieve you from compliance with such obligations. A waiver by us of any default shall not constitute a waiver of any subsequent default. No waiver by us of any of these Terms & Conditions shall be effective unless it is expressly stated to be a waiver and is communicated to you in writing.</p>
+    <p>If we fail at any time to insist upon strict performance of any of your obligations under these Terms &amp; Conditions, or if we fail to exercise any of the rights or remedies to which we are entitled under them, this shall not constitute a waiver of such rights or remedies and shall not relieve you from compliance with such obligations. A waiver by us of any default shall not constitute a waiver of any subsequent default. No waiver by us of any of these Terms &amp; Conditions shall be effective unless it is expressly stated to be a waiver and is communicated to you in writing.</p>
 
     <h3>16. Severability</h3>
 
@@ -171,11 +170,11 @@
 
     <h3>18. Alterations to Terms &amp; Conditions</h3>
 
-    <p>Westfield may revise or alter these Terms & Conditions at any time. Revisions and alterations will be posted on the Site. Users are responsible for reviewing the Site from time to time to ensure compliance. If Westfield makes a request to you to stop using the Site or to promptly return or destroy copies of information provided on the Site, you must immediately comply with that request, and confirm in writing to Westfield within five (5) business days after that request, that you have done so.</p>
+    <p>Westfield may revise or alter these Terms &amp; Conditions at any time. Revisions and alterations will be posted on the Site. Users are responsible for reviewing the Site from time to time to ensure compliance. If Westfield makes a request to you to stop using the Site or to promptly return or destroy copies of information provided on the Site, you must immediately comply with that request, and confirm in writing to Westfield within five (5) business days after that request, that you have done so.</p>
 
     <h3>19. Feedback and complaints</h3>
 
-    <p>You can contact us about questions or comments about Westfield Online on 1300 788 957 Monday - Friday 9:00AM - 5:00PM AEDST or by email to <%= link_to "eshoppersupport@au.westfield.com", "mailto:eshoppersupport@au.westfield.com" %></p>
+    <p>You can contact us about questions or comments about Westfield Online on 1300 788 957 Monday - Friday 9:00AM - 5:00PM AEDST or by email to <%= mail_to "eshoppersupport@au.westfield.com" %></p>
 
     <p>Complaints about a specific Participating Retailer or product must be directed to the Participating Retailer concerned through the contact details provided on the email that you receive confirming that your order is being processed, for resolution directly with them. Westfield has no obligation to help resolve disputes with Participating Retailers. If you have a complaint about a specific purchase, and have paid by Visa or Mastercard, you may have charge back rights and should contact your financial institution.</p>
 
