--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -1,19 +1,12 @@
 <div class="tile__image">
-  <% if result.cloudinary_public_id %>
-    <%= cl_image_tag result.cloudinary_public_id,
+  <%= cl_image_tag result.cloudinary_public_id, {
       'data-height' => result.image_height,
       format: 'jpg',
       alt: "Photo of product: #{result.title}",
       width: 288,
       crop: :limit
-    %>
-  <% else %>
-    <%= fetch_image_tag result.primary_image,
-      alt: "Photo of product: #{result.title}",
-      width: 288,
-      crop: :limit
-    %>
-  <% end -%>
+    }.merge((options if defined? options) || {})
+  %>
 </div>
 
 <div class="tile__meta">
