--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -1,21 +1,23 @@
 <div class="section-nav container container--wide container--dark">
 
   <%# Section nav %>
+  <%# [BACKEND]: this 'if' can be removed when everything is dynamic %>
+  <% if @centre.present? %>
   <div class="container container--position">
-    <div class="nav-contextual nav-contextual--dark js-nav-contextual">
+    <%# [BACKEND]:
+        - We have to keep the HTML comments between each top level `li`s or output them all on 1 line, this is to get around the browser creating unneeded white space.
+        - Class `is-active` needs to be appended to the active top level `a`s i.e. the page the user is on which includes any sub categories but do not append the class onto the sub category `a`s (only top level).
+    %>
+    <%#<div class="nav-contextual nav-contextual--dark js-nav-contextual">
       <div class="nav-contextual__clip">
-        <nav class="nav-contextual__clip__inner" role="navigation" aria-label="<%= params[:controller].titlecase %> categories navigation">
+        <nav class="nav-contextual__clip__inner" role="navigation" aria-label="Categories navigation">
           <ul class="nav-contextual__list horiz-list js-nav-contextual-list">
-            <%# [BACKEND]:
-                - We have to have the HTML comments between each top level `li`s or output them all on 1 line, this is to get around the browser creating unneeded white space.
-                - Class `is-active` needs to be appended to the active top level `a`s i.e. the page the user is on which includes any sub categories.
-            %>
             <li class="drop-down-menu drop-down-container drop-down-container--hover">
-              <a class="is-active" href="http://google.com.au">Women</a>
+              <a href="#">Women</a>
               <div class="drop-down-menu__target drop-down box box--drop-down">
                 <ul class="drop-down-menu__list">
-                  <li class="drop-down-menu__divider "><a href="http://google.com.au" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
-                  <li class="drop-down-menu__divider"><a href="http://google.com.au" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                  <li class="drop-down-menu__divider "><a href="#" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
                   <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
                   <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Scelerisque augue elementum</a></li>
                   <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Tincidunt rhoncus</a></li>
@@ -92,20 +94,23 @@
         </nav>
         <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
       </div>
-    </div>
+    </div>%>
     <%# [FIXME]: this will be initialised globally, just waiting for 'Movies' and 'Opening Hours' pages to be done %>
-    <% content_for :javascript do %>
-      <script>
+    <%# content_for :javascript do %>
+      <!--<script>
         $('.js-nav-contextual').navContextual();
-      </script>
-    <% end -%>
+      </script>-->
+    <%# end -%>
     <%# Show products/deals/events centre selector toggle button %>
-    <button class="btn btn--main btn--main-alt4 btn--main-compact-icon-sml" toggle-visibility="show-products-deals-events-toggle">
-      <span class="icon icon-ellipsis-horizontal icon--xlrg icon--flush-top" aria-hidden="true"></span>
-      <span class="hide-visually">Toggle <%= params[:controller] %> centre selector</span>
-    </button>
+    <%# if @centre.present? %>
+      <button class="btn btn--main btn--main-alt4 btn--main-compact-icon-sml" toggle-visibility="show-products-deals-events-toggle">
+        <span class="icon icon-ellipsis-horizontal icon--xlrg icon--flush-top" aria-hidden="true"></span>
+        <span class="hide-visually">Toggle <%= params[:controller] %> centre selector</span>
+      </button>
+    <%#- end -%>
     <%# //Show products/deals/events centre selector toggle button %>
   </div>
+  <%- end -%>
   <%# //Section nav %>
 
   <%# Show products/deals/events centre selector %>
